# public-travel-notifications-server

./: README.md  pyproject.toml  sync.sh
config/: fcm_certificate.py
database_setup/: setup_database.py
helpers/: db_connection.py  singleton.py
notification_service/: README.md  notification_sender.py  receive_token_api.py  user_requests.py
scraping/: cp_scraper.py  regiojet_scraper.py
scraping/data/: trainlines_names.py
